# adk-openshift-agent

./: .gitignore  AG_UI_PROTOCOL.md  CLAUDE.md  PLANNER.md  PLAYWRIGHT.md  README.md  SECURITY_AUDIT.md  TECH_STACK.md
backend/: .env.example  README.md  config.py  main.py  pyproject.toml
backend/agent/: __init__.py  agent.py  incident_detection_agent.py  kubernetes_agent.py  metrics_agent.py  openshift_docs_agent.py
backend/agent/tools/: __init__.py  graph_timeseries.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/copilotkit/: route.ts
